--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        //高德地图配置开始
+        ndk {
+            //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
+            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86","x86_64"
+        }
+        //高德地图配置结束
     }
     buildTypes {
         release {
@@ -36,4 +43,20 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.9.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.google.zxing:core:3.3.0'
+
+    implementation files('libs/AMap3DMap_7.1.0_AMapSearch_7.1.0_AMapLocation_4.8.0_20191210.jar')
+    implementation files('libs/hellocharts-library-1.5.8.jar')
+
+
+    //高德地图配置开始
+
+//    //3D地图so及jar
+//    compile 'com.amap.api:3dmap:latest.integration'
+//    //定位功能
+//    compile 'com.amap.api:location:latest.integration'
+//    //搜索功能
+//    compile 'com.amap.api:search:latest.integration'
+
+    //高德地图配置结束
 }
